--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav>
         <ul class="navbar">
             <li><a href="#">Vikas.com</a></li>
-            <li><a href="EDUCATION.HTML">Education</a></li>
+            <li><a href="education.html">Education</a></li>
             <li><a href="#">Resume</a></li>
-            <li><a href="1. PROJECT.HTML">Projects</a></li>
-            <li><a href="CONTACTME.HTML">Contact Me</a></li>
+            <li><a href="project.html>Projects</a></li>
+            <li><a href="contactme.html">Contact Me</a></li>
         </ul>
     </nav>
 
