--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#">Vikas.com</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="#">Resume</a></li>
-            <li><a href="project.html>Projects</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="contactme.html">Contact Me</a></li>
         </ul>
     </nav>
